# example_client

./: hello.py  pyproject.toml  test.ipynb
.github/workflows/: ci.yaml
tests/: test_hello.py
